deploy/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ems
  labels:
    name: ems
    app: employee-management-system
